feat: 更新 golang

--- a/golang/1.18/slim-buster/Dockerfile
+++ b/golang/1.18/slim-buster/Dockerfile
@@ -4,20 +4,17 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM debian:buster-slim
+FROM buildpack-deps:buster-scm
 
 # install cgo-related dependencies
 RUN set -eux; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
-		ca-certificates \
 		g++ \
 		gcc \
-		git \
 		libc6-dev \
 		make \
 		pkg-config \
-        wget \
 	; \
 	rm -rf /var/lib/apt/lists/*
 
@@ -30,8 +27,34 @@ RUN set -eux; \
 	url=; \
 	case "$arch" in \
 		'amd64') \
-			url='http://ftp.loongnix.cn/toolchain/golang/go-1.18/go1.18.10.linux-amd64.tar.gz'; \
-			sha256='7ef98beca9d6bb14abcb27bbc6b7c3e2e703194eb05f8f209a8046dc9c8c40a9'; \
+			url='https://dl.google.com/go/go1.18.10.linux-amd64.tar.gz'; \
+			sha256='5e05400e4c79ef5394424c0eff5b9141cb782da25f64f79d54c98af0a37f8d49'; \
+			;; \
+		'armel') \
+			export GOARCH='arm' GOARM='5' GOOS='linux'; \
+			;; \
+		'armhf') \
+			url='https://dl.google.com/go/go1.18.10.linux-armv6l.tar.gz'; \
+			sha256='e9f2f2361364c04a8f0d12228e4c5c2b870f4d1639ca92031c4013a95aa205be'; \
+			;; \
+		'arm64') \
+			url='https://dl.google.com/go/go1.18.10.linux-arm64.tar.gz'; \
+			sha256='160497c583d4c7cbc1661230e68b758d01f741cf4bece67e48edc4fdd40ed92d'; \
+			;; \
+		'i386') \
+			url='https://dl.google.com/go/go1.18.10.linux-386.tar.gz'; \
+			sha256='9249551992c9518ec8ce6690d32206f12ed9122e360407f7e7ab9a6adc627a9b'; \
+			;; \
+		'mips64el') \
+			export GOARCH='mips64le' GOOS='linux'; \
+			;; \
+		'ppc64el') \
+			url='https://dl.google.com/go/go1.18.10.linux-ppc64le.tar.gz'; \
+			sha256='761014290febf0e10dfeba44ec551792dad32270a11debee8ed4f30c5f3c760d'; \
+			;; \
+		's390x') \
+			url='https://dl.google.com/go/go1.18.10.linux-s390x.tar.gz'; \
+			sha256='9755ab0460a04b535e513fac84db2e1ae6a197d66d3a097e14aed3b3114df85d'; \
 			;; \
 		'loongarch64') \
 			url='http://ftp.loongnix.cn/toolchain/golang/go-1.18/go1.18.10.linux-loong64.tar.gz'; \
@@ -43,8 +66,8 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='http://ftp.loongnix.cn/toolchain/golang/go-1.18/go1.18.10.src.tar.gz'; \
-		sha256='96052d549212919c621395e407f817a02aee92e003170aab2cb1c6d671a4507b'; \
+		url='https://dl.google.com/go/go1.18.10.src.tar.gz'; \
+		sha256='9cedcca58845df0c9474ae00274c44a95c9dfaefb132fc59921c28c7c106f8e6'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
 		echo >&2; \
@@ -52,7 +75,6 @@ RUN set -eux; \
 	\
 	wget -O go.tgz "$url" --progress=dot:giga; \
 	echo "$sha256 *go.tgz" | sha256sum -c -; \
-	\
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
@@ -91,5 +113,5 @@ RUN set -eux; \
 
 ENV GOPATH /go
 ENV PATH $GOPATH/bin:$PATH
-RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 1777 "$GOPATH"
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 WORKDIR $GOPATH
