--- a/golang/1.19/slim-buster/Dockerfile
+++ b/golang/1.19/slim-buster/Dockerfile
@@ -4,20 +4,23 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM debian:buster-slim
+#
+# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
+#
+# PLEASE DO NOT EDIT IT DIRECTLY.
+#
+
+FROM buildpack-deps:buster-scm
 
 # install cgo-related dependencies
 RUN set -eux; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
-		ca-certificates \
 		g++ \
 		gcc \
-		git \
 		libc6-dev \
 		make \
 		pkg-config \
-        wget \
 	; \
 	rm -rf /var/lib/apt/lists/*
 
@@ -30,8 +33,34 @@ RUN set -eux; \
 	url=; \
 	case "$arch" in \
 		'amd64') \
-			url='http://ftp.loongnix.cn/toolchain/golang/go-1.19/go1.19.7.linux-amd64.tar.gz'; \
-			sha256='21460a0f66fc1343d389c375521d963ee4afb4c31b311b76c6735e01407485a1'; \
+			url='https://dl.google.com/go/go1.19.7.linux-amd64.tar.gz'; \
+			sha256='7a75720c9b066ae1750f6bcc7052aba70fa3813f4223199ee2a2315fd3eb533d'; \
+			;; \
+		'armel') \
+			export GOARCH='arm' GOARM='5' GOOS='linux'; \
+			;; \
+		'armhf') \
+			url='https://dl.google.com/go/go1.19.7.linux-armv6l.tar.gz'; \
+			sha256='93b1f621ddfc2c2b4e383e185fa7801e80f8b546918cb96afea2723677928312'; \
+			;; \
+		'arm64') \
+			url='https://dl.google.com/go/go1.19.7.linux-arm64.tar.gz'; \
+			sha256='071ea7bf386fdd08df524859b878d99fc359e491e7ad65c1c1cc55b67972c882'; \
+			;; \
+		'i386') \
+			url='https://dl.google.com/go/go1.19.7.linux-386.tar.gz'; \
+			sha256='5057ef6c1d221a9fe67e99c73b0deaa5bffc93bb854c11ce4b64a04f288ad20a'; \
+			;; \
+		'mips64el') \
+			export GOARCH='mips64le' GOOS='linux'; \
+			;; \
+		'ppc64el') \
+			url='https://dl.google.com/go/go1.19.7.linux-ppc64le.tar.gz'; \
+			sha256='e7c9189507f5ba98d34877cd2368af76e3b923af43925aa36feb24d9844aac4f'; \
+			;; \
+		's390x') \
+			url='https://dl.google.com/go/go1.19.7.linux-s390x.tar.gz'; \
+			sha256='43eacfa668742cbf0a1e24972394e4d3977a2e3e993e0f27484ae913a5556716'; \
 			;; \
 		'loongarch64') \
 			url='http://ftp.loongnix.cn/toolchain/golang/go-1.19/go1.19.7.linux-loong64.tar.gz'; \
@@ -43,8 +72,8 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='http://ftp.loongnix.cn/toolchain/golang/go-1.19/go1.19.7.src.tar.gz'; \
-		sha256='a8bb6f64aafb071cd658a2c73990ba3b2d430a196fc56bebf3d720b260dff6dd'; \
+		url='https://dl.google.com/go/go1.19.7.src.tar.gz'; \
+		sha256='775bdf285ceaba940da8a2fe20122500efd7a0b65dbcee85247854a8d7402633'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
 		echo >&2; \
@@ -52,7 +81,6 @@ RUN set -eux; \
 	\
 	wget -O go.tgz "$url" --progress=dot:giga; \
 	echo "$sha256 *go.tgz" | sha256sum -c -; \
-	\
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
@@ -91,5 +119,5 @@ RUN set -eux; \
 
 ENV GOPATH /go
 ENV PATH $GOPATH/bin:$PATH
-RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 1777 "$GOPATH"
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 WORKDIR $GOPATH
