--- a/golang/1.20/slim-buster/Dockerfile
+++ b/golang/1.20/slim-buster/Dockerfile
@@ -4,20 +4,17 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM debian:buster-slim
+FROM buildpack-deps:buster-scm
 
 # install cgo-related dependencies
 RUN set -eux; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
-		ca-certificates \
 		g++ \
 		gcc \
-		git \
 		libc6-dev \
 		make \
 		pkg-config \
-        wget \
 	; \
 	rm -rf /var/lib/apt/lists/*
 
@@ -30,8 +27,34 @@ RUN set -eux; \
 	url=; \
 	case "$arch" in \
 		'amd64') \
-			url='http://ftp.loongnix.cn/toolchain/golang/go-1.20/go1.20.2.linux-amd64.tar.gz'; \
-			sha256='b03bd9d65feb4b6a62773622c3862aa33dce6f9c6fbfecb4306c67e5dbe8b1bf'; \
+			url='https://dl.google.com/go/go1.20.2.linux-amd64.tar.gz'; \
+			sha256='4eaea32f59cde4dc635fbc42161031d13e1c780b87097f4b4234cfce671f1768'; \
+			;; \
+		'armel') \
+			export GOARCH='arm' GOARM='5' GOOS='linux'; \
+			;; \
+		'armhf') \
+			url='https://dl.google.com/go/go1.20.2.linux-armv6l.tar.gz'; \
+			sha256='d79d56bafd6b52b8d8cbe3f8e967caaac5383a23d7a4fa9ac0e89778cd16a076'; \
+			;; \
+		'arm64') \
+			url='https://dl.google.com/go/go1.20.2.linux-arm64.tar.gz'; \
+			sha256='78d632915bb75e9a6356a47a42625fd1a785c83a64a643fedd8f61e31b1b3bef'; \
+			;; \
+		'i386') \
+			url='https://dl.google.com/go/go1.20.2.linux-386.tar.gz'; \
+			sha256='ee240ed33ae57504c41f04c12236aeaa17fbeb6ea9fcd096cd9dc7a89d10d4db'; \
+			;; \
+		'mips64el') \
+			export GOARCH='mips64le' GOOS='linux'; \
+			;; \
+		'ppc64el') \
+			url='https://dl.google.com/go/go1.20.2.linux-ppc64le.tar.gz'; \
+			sha256='850564ddb760cb703db63bf20182dc4407abd2ff090a95fa66d6634d172fd095'; \
+			;; \
+		's390x') \
+			url='https://dl.google.com/go/go1.20.2.linux-s390x.tar.gz'; \
+			sha256='8da24c5c4205fe8115f594237e5db7bcb1d23df67bc1fa9a999954b1976896e8'; \
 			;; \
 		'loongarch64') \
 			url='http://ftp.loongnix.cn/toolchain/golang/go-1.20/go1.20.2.linux-loong64.tar.gz'; \
@@ -43,8 +66,8 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='http://ftp.loongnix.cn/toolchain/golang/go-1.20/go1.20.2.src.tar.gz'; \
-		sha256='19b29bd11ad067ec9daf5d6dd0fe9079166dced9cd71fb7c572f916fe2b5753e'; \
+		url='https://dl.google.com/go/go1.20.2.src.tar.gz'; \
+		sha256='4d0e2850d197b4ddad3bdb0196300179d095bb3aefd4dfbc3b36702c3728f8ab'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
 		echo >&2; \
@@ -52,14 +75,19 @@ RUN set -eux; \
 	\
 	wget -O go.tgz "$url" --progress=dot:giga; \
 	echo "$sha256 *go.tgz" | sha256sum -c -; \
-	\
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
 	if [ -n "$build" ]; then \
 		savedAptMark="$(apt-mark showmanual)"; \
-		apt-get update; \
-		apt-get install -y --no-install-recommends golang-go; \
+# add backports for newer go version for bootstrap build: https://github.com/golang/go/issues/44505
+		( \
+			. /etc/os-release; \
+			echo "deb https://deb.debian.org/debian $VERSION_CODENAME-backports main" > /etc/apt/sources.list.d/backports.list; \
+			\
+			apt-get update; \
+			apt-get install -y --no-install-recommends -t "$VERSION_CODENAME-backports" golang-go; \
+		); \
 		\
 		export GOCACHE='/tmp/gocache'; \
 		\
@@ -91,5 +119,5 @@ RUN set -eux; \
 
 ENV GOPATH /go
 ENV PATH $GOPATH/bin:$PATH
-RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 1777 "$GOPATH"
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 WORKDIR $GOPATH
