--- a/maven/openjdk-17-slim-buster/Dockerfile
+++ b/maven/openjdk-17-slim-buster/Dockerfile
@@ -4,10 +4,10 @@ RUN apt-get update \
   && apt-get install -y curl procps \
   && rm -rf /var/lib/apt/lists/*
 
-ARG MAVEN_VERSION=3.9.2
+ARG MAVEN_VERSION=3.9.3
 ARG USER_HOME_DIR="/root"
-ARG SHA=900bdeeeae550d2d2b3920fe0e00e41b0069f32c019d566465015bdd1b3866395cbe016e22d95d25d51d3a5e614af2c83ec9b282d73309f644859bbad08b63db
-ARG BASE_URL=https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries
+ARG SHA=400fc5b6d000c158d5ee7937543faa06b6bda8408caa2444a9c947c21472fde0f0b64ac452b8cec8855d528c0335522ed5b6c8f77085811c7e29e1bedbb5daa2
+ARG BASE_URL=https://downloads.apache.org/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
   && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
