--- a/mc/buster-slim/Dockerfile
+++ b/mc/buster-slim/Dockerfile
@@ -1,6 +1,6 @@
-FROM golang:1.19-buster AS builder-mc
+FROM golang:1.21-buster AS builder-mc
 ARG TARGETARCH
-ARG MC_VERSION=RELEASE.2023-06-06T13-48-56Z
+ARG MC_VERSION=RELEASE.2023-10-30T18-43-32Z
 
 WORKDIR /opt
 RUN set -ex \
@@ -15,19 +15,14 @@ RUN set -ex \
 FROM debian:buster-slim
 
 ARG TARGETARCH
-
 ARG RELEASE
+
+LABEL maintainer="MinIO Inc <dev@min.io>"
 
 COPY --from=builder-mc /opt/mc/mc /usr/bin/mc
 COPY --from=builder-mc /opt/mc/CREDITS /licenses/CREDITS
 COPY --from=builder-mc /opt/mc/LICENSE /licenses/LICENSE
 
-RUN set -ex \
-    && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends curl ca-certificates util-linux gzip lsof tar net-tools jq \
-    && apt-get remove --purge --auto-remove -y \
-    && rm -rf /var/lib/apt/lists/* \
-    && chmod +x /usr/bin/mc
+RUN chmod +x /usr/bin/mc
 
 ENTRYPOINT ["mc"]
