--- a/minio/buster-slim/Dockerfile
+++ b/minio/buster-slim/Dockerfile
@@ -1,23 +1,6 @@
-FROM golang:1.20-buster AS builder-minio
+FROM golang:1.21-buster AS builder-mc
 ARG TARGETARCH
-ARG MINIO_VERSION=RELEASE.2023-06-09T07-32-12Z
-
-WORKDIR /opt
-RUN set -ex \
-    && git clone -b ${MINIO_VERSION} --depth=1 https://github.com/minio/minio.git
-
-ARG GOPROXY=https://goproxy.cn,direct
-WORKDIR /opt/minio
-RUN set -ex \
-    && sed -i 's@minisign@# minisign@g' dockerscripts/verify-minio.sh \
-    && MINIO_RELEASE="RELEASE" make build \
-    && cp minio minio.${MINIO_VERSION} \
-    && echo $(sha256sum minio.${MINIO_VERSION}) > minio.sha256sum \
-    && ./minio --version
-
-FROM golang:1.19-buster AS builder-mc
-ARG TARGETARCH
-ARG MC_VERSION=RELEASE.2023-06-06T13-48-56Z
+ARG MC_VERSION=RELEASE.2023-10-30T18-43-32Z
 
 WORKDIR /opt
 RUN set -ex \
@@ -29,9 +12,30 @@ RUN set -ex \
     && MC_RELEASE="RELEASE" make build \
     && ./mc --version
 
-FROM debian:buster-slim
-
+FROM golang:1.21-buster AS build
 ARG TARGETARCH
+ARG MINIO_VERSION=RELEASE.2023-11-01T18-37-25Z
+
+WORKDIR /opt
+RUN set -ex \
+    && git clone -b ${MINIO_VERSION} --depth=1 https://github.com/minio/minio.git
+
+ARG GOPROXY=https://goproxy.cn,direct
+WORKDIR /opt/minio
+RUN set -ex \
+    && MINIO_RELEASE="RELEASE" make build \
+    && cp minio minio.${MINIO_VERSION} \
+    && echo $(sha256sum minio.${MINIO_VERSION}) > minio.sha256sum \
+    && ./minio --version
+
+COPY --from=builder-mc /opt/mc/mc /go/bin/mc
+
+RUN set -ex \
+    && cp /opt/minio/minio /go/bin/minio \
+    && chmod +x /go/bin/minio \
+    && chmod +x /go/bin/mc
+
+FROM debian:buster-slim
 
 ARG RELEASE
 
@@ -50,33 +54,18 @@ ENV MINIO_ACCESS_KEY_FILE=access_key \
     MINIO_KMS_SECRET_KEY_FILE=kms_master_key \
     MINIO_UPDATE_MINISIGN_PUBKEY="RWTx5Zr1tiHQLwG9keckT0c45M3AGeHD6IvimQHpyRywVWGbP1aVSGav" \
     MINIO_CONFIG_ENV_FILE=config.env \
-    PATH=/opt/bin:$PATH
+    MC_CONFIG_DIR=/tmp/.mc
 
-COPY --from=builder-minio /opt/minio/dockerscripts/verify-minio.sh /usr/bin/verify-minio.sh
-COPY --from=builder-minio /opt/minio/dockerscripts/docker-entrypoint.sh /usr/bin/docker-entrypoint.sh
-COPY --from=builder-minio /opt/minio/CREDITS /licenses/CREDITS
-COPY --from=builder-minio /opt/minio/LICENSE /licenses/LICENSE
-COPY --from=builder-minio /opt/minio/minio /opt/bin/minio
-COPY --from=builder-minio /opt/minio/minio.sha256sum /opt/bin/minio.sha256sum
-COPY --from=builder-mc /opt/mc/mc /opt/bin/mc
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=build /go/bin/minio /usr/bin/minio
+COPY --from=build /go/bin/mc /usr/bin/mc
 
-RUN set -ex \
-    && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends curl ca-certificates util-linux gzip lsof tar net-tools iproute2 iputils-ping jq \
-    && apt-get remove --purge --auto-remove -y \
-    && rm -rf /var/lib/apt/lists/* \
-    && chmod +x /usr/bin/verify-minio.sh \
-    && chmod +x /usr/bin/docker-entrypoint.sh \
-    && chmod +x /opt/bin/minio \
-    && chmod +x /opt/bin/mc \
-    && gzip /opt/bin/mc \
-    && /usr/bin/verify-minio.sh
+COPY --from=build /opt/minio/CREDITS /licenses/CREDITS
+COPY --from=build /opt/minio/LICENSE /licenses/LICENSE
+COPY --from=build /opt/minio/dockerscripts/docker-entrypoint.sh /usr/bin/docker-entrypoint.sh
 
 EXPOSE 9000
-
-ENTRYPOINT ["/usr/bin/docker-entrypoint.sh"]
-
 VOLUME ["/data"]
 
+ENTRYPOINT ["/usr/bin/docker-entrypoint.sh"]
 CMD ["minio"]
